[package]
name = "authako"
version = "0.1.0"
authors = ["larahack <chahmot.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
openssl = "0.10"
serde_json = "1.0"
